--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
-    "hbs": "~4.0.0",
+    "express-handlebars": "^3.0.0",
+    "hbs": "^4.0.1",
     "jquery": "^3.1.1",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
