--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "express-handlebars": "^3.0.0",
+    "font-awesome": "^4.7.0",
     "hbs": "^4.0.1",
     "jquery": "^3.1.1",
+    "metismenu": "^2.6.1",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   },
