--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.14.2",
     "font-awesome": "^4.7.0",
     "hbs": "^4.0.1",
     "jquery": "^3.1.1",
