--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "approvejs": "^3.0.2",
     "body-parser": "~1.15.1",
     "bootstrap": "^3.3.7",
     "cookie-parser": "~1.4.3",
@@ -18,8 +19,7 @@
     "jquery": "^3.1.1",
     "metismenu": "^2.6.1",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0",
-    "validator.js": "^2.0.3"
+    "serve-favicon": "~2.3.0"
   },
   "description": "Oregon State University Valley Library Libnav project.",
   "main": "app.js",
