--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "font-awesome": "^4.7.0",
     "hbs": "^4.0.1",
     "jquery": "^3.1.1",
+    "lodash": "^4.17.4",
     "metismenu": "^2.6.1",
     "morgan": "~1.7.0",
     "pathfinding": "^0.4.18",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "svg-square-grid-generator": "^0.1.2"
   },
   "description": "Oregon State University Valley Library Libnav project.",
   "main": "app.js",
