--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^3.3.7",
     "cookie-parser": "~1.4.3",
     "d3": "^4.4.4",
+    "d3-selection": "^1.0.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "express-handlebars": "^3.0.0",
@@ -21,6 +22,7 @@
     "lodash": "^4.17.4",
     "metismenu": "^2.6.1",
     "morgan": "~1.7.0",
+    "mysql": "^2.13.0",
     "pathfinding": "^0.4.18",
     "serve-favicon": "~2.3.0",
     "svg-square-grid-generator": "^0.1.2"
