--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "cookie-parser": "~1.4.3",
     "d3": "^4.4.4",
     "d3-selection": "^1.0.3",
+    "datatables.net": "^1.10.13",
+    "datatables.net-bs": "^1.10.13",
+    "datatables.net-responsive": "^2.1.1",
+    "datatables.net-responsive-bs": "^2.1.1",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "express-handlebars": "^3.0.0",
