--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.17.4",
     "metismenu": "^2.6.1",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
     "mysql": "^2.13.0",
     "pathfinding": "^0.4.18",
     "serve-favicon": "~2.3.0",
