--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "datatables.net-responsive-bs": "^2.1.1",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "express-fileupload": "^0.1.2",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.14.2",
     "font-awesome": "^4.7.0",
