--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "async": "^2.1.5",
     "body-parser": "~1.15.1",
     "bootstrap": "^3.3.7",
+    "cas-authentication": "0.0.8",
     "cookie-parser": "~1.4.3",
     "d3": "^4.4.4",
     "d3-selection": "^1.0.3",
