--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "metismenu": "^2.6.1",
     "morgan": "~1.7.0",
     "multer": "^1.3.0",
+    "mv": "^2.1.1",
     "mysql": "^2.13.0",
     "pathfinding": "^0.4.18",
+    "request": "^2.81.0",
     "serve-favicon": "~2.3.0",
     "svg-square-grid-generator": "^0.1.2"
   },
