--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "async": "^2.1.5",
     "body-parser": "~1.15.1",
     "bootstrap": "^3.3.7",
-    "cas-authentication": "0.0.8",
     "cookie-parser": "~1.4.3",
     "d3": "^4.4.4",
     "d3-selection": "^1.0.3",
@@ -32,6 +31,8 @@
     "multer": "^1.3.0",
     "mv": "^2.1.1",
     "mysql": "^2.13.0",
+    "passport": "^0.3.2",
+    "passport-cas-kth": "0.0.3",
     "pathfinding": "^0.4.18",
     "request": "^2.81.0",
     "serve-favicon": "~2.3.0",
