--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "pathfinding": "^0.4.18",
     "request": "^2.81.0",
     "serve-favicon": "~2.3.0",
-    "svg-square-grid-generator": "^0.1.2"
+    "svg-square-grid-generator": "^0.1.2",
+    "xml2js": "^0.4.17"
   },
   "description": "Oregon State University Valley Library Libnav project.",
   "main": "app.js",
