--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.14.2",
     "font-awesome": "^4.7.0",
+    "fuse.js": "^3.0.0",
     "hbs": "^4.0.1",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
