--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.14.2",
     "font-awesome": "^4.7.0",
     "fuse.js": "^3.0.0",
+    "global": "^4.3.2",
     "hbs": "^4.0.1",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
@@ -35,6 +36,7 @@
     "passport": "^0.3.2",
     "passport-cas-kth": "0.0.3",
     "pathfinding": "^0.4.18",
+    "pm2": "^2.5.0",
     "request": "^2.81.0",
     "serve-favicon": "~2.3.0",
     "svg-square-grid-generator": "^0.1.2",
